--- a/index.html
+++ b/index.html
@@ -257,7 +257,10 @@
 
 						</select> -->
 						<div class="custom-select">
-							<div class="selected-option">Выберите...</div>
+							<div class="selected-option">
+								<span class="selected-text">Выберите...</span>
+								<img src="/img/iconsselect.png" class="select-icon" alt="▼">
+							</div>
 							<ul class="options">
 								<li>Обязательно буду</li>
 								<li>Буду</li>
